<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <EditText
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/date"
        android:inputType="date">

    </EditText>

    <EditText
        android:id="@+id/editCostPerGallon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost_per_gallon"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:layout_below="@+id/editDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/editGallonsPumped"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gallons_pumped"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:layout_below="@+id/editCostPerGallon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </EditText>

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_below="@+id/editCostPerGallon"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />


</RelativeLayout>