<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.crooks.androidcrudapp.MainActivity">

    <Button
        android:id="@+id/buttonAddFillUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_fill_up" />

    <Button
        android:id="@+id/buttonCharts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charts"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/buttonStartFresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Fresh"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/buttonCharts"
        android:layout_toStartOf="@+id/buttonCharts"
        android:layout_marginRight="19dp"
        android:layout_marginEnd="19dp" />

    <TextView
        android:id="@+id/textViewRecordCount"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAddFillUp"
        android:text="@string/_0_records_found"
        android:padding="1dp" />

    <ScrollView
        android:id="@+id/scrollViewRecords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRecordCount" >

        <LinearLayout
            android:id="@+id/linearLayoutRecords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
